bear:

Removed the Threadexist test in the SetPositions() function to fix the problem where the position is set prior to the first run call. Re Remember the last media position in Zoomplayer fix.

Made some further improvments to the Load() file change feature to make it more robust and to allow for Infinite tee filter in the chain.
Fixed a number of bugs in the duration parser to allow for buggy streams such as those that have PRBS content. 

Made some further improvments to the Load() file change feature.
Some other minor improvements.

Fixed a problem with double starting after a file change.
Added a windows load feature to the Load Function, if you call it with a null filename it will now open a Browse window.
Improved the method of changing files, can now change files when paused and stopped. 
Fixed a problem with the property page updating while the pidparser was restarting.

Added a File Load feature to the ITSFileSource Interface as well as a button to the TSFileSource Property page. You can now change the file being played on the fly.
Added a auto reload feature for Timeshifting files where the TSFileSource fiiter will restart if the timeshift file changes size shuch as in a restart of the fileWriter filter.
Isolated the pidArray from the TSFileSourcePin class functions so it would reduce accessing conflicts.
added in some delete code in the MultiFileWriter class to delete the file before it is reused. This eliminates any delay issues due to Read/Write conflicts. 

Fixed the auto pid parsing problem with the MultiFileWriter.
Removed the extra RefreshTSBufferFile() calls from the MulitfileWriter as they seem to be causing problems.
Added a seperate getFilePointer() & setFilePointer() calls to the fileWriters to reduce the need for special code for the different filewriters.

Replaced the class Destructor calls in all the code with delete.
Added CAMThreads to both prop pages for regular updating.

Fixed the GetAvailable function to return correct times.